[project]
name = "practicepanther_mcp"
version = "0.1.0"
description = "MCP server for PracticePanther — legal practice management (matters, accounts, time entries, invoices)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Sanjibani Choudhury", email = "schoudhury1991@gmail.com" },
]
keywords = ["mcp", "model-context-protocol", "practicepanther", "legal", "law-firm", "practice-management"]

dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[project.scripts]
practicepanther_mcp = "practicepanther_mcp.server:main"
practicepanther-mcp-auth = "practicepanther_mcp.auth:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/practicepanther_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"