[project]
name = "practicepanther_mcp"
dynamic = ["version"]
description = "MCP server for PracticePanther \u2014 legal practice management (matters, accounts, time entries, invoices)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Sanjibani Choudhury", email = "schoudhury1991@gmail.com" },
]
keywords = ["mcp", "model-context-protocol", "practicepanther", "legal", "law-firm", "practice-management", "oauth2", "odata"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "structlog>=24.1.0",
]

[project.urls]
Homepage = "https://github.com/sanjibani/practicepanther-mcp"
Issues = "https://github.com/sanjibani/practicepanther-mcp/issues"
Changelog = "https://github.com/sanjibani/practicepanther-mcp/blob/main/CHANGELOG.md"
"Other MCPs" = "https://github.com/sanjibani?q=-mcp"
"Custom MCP engagements" = "https://sanjibani.github.io/mcp-services/"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "hypothesis>=6.100.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "coverage>=7.5.0",
]

[project.scripts]
practicepanther_mcp = "practicepanther_mcp.server:main"
practicepanther-mcp-auth = "practicepanther_mcp.auth:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/practicepanther_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/practicepanther_mcp"]
include = ["src/practicepanther_mcp/py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: marks tests that hit live PracticePanther API (deselect with '-m \"not integration\"')",
    "live: marks tests requiring real OAuth credentials",
]

[tool.coverage.run]
source = ["src/practicepanther_mcp"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
# Consolidated rule set (encode/astral-sh): E/F/W (pycodestyle/pyflakes), I (isort),
# N (pep8-naming), UP (pyupgrade), B (bugbear), A (builtins), C4 (comprehensions),
# DTZ (datetime), T20 (print), PT (pytest), Q (quotes), RET (return),
# SIM (simplify), TID (tidy-imports), ARG (unused-args), PTH (use-pathlib),
# ERA (commented-out), PL (pylint), RUF (ruff-specific).
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T20", "PT", "Q", "RET", "SIM", "TID", "ARG", "PTH", "ERA", "PL", "RUF"]
ignore = [
    "PLR0913",  # too-many-args — OK in API clients (flat resource methods)
    "PLR2004",  # magic-value-comparison — OK for HTTP status codes / OAuth errors
    "PLR0911",  # too-many-return-statements — _request has many distinct paths
    "PLR0912",  # too-many-branches — _request has many retry/error paths
    "PLR0915",  # too-many-statements — _request is the central method
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR0913", "ARG", "PTH", "T20", "PLR0912", "PLR0915"]
"src/practicepanther_mcp/auth.py" = ["T201"]  # CLI tool — print is intentional

[tool.ruff.format] 
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
files = ["src/practicepanther_mcp", "tests"]

[[tool.mypy.overrides]]
module = ["respx.*", "structlog.*"]
ignore_missing_imports = true
